--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Display Grid</title>
 </head>
+
 <body>
-    
+    <header>
+        <h1>AMEINDA</h1>
+    </header>
+    <nav>
+        <h1>NAV</h1>
+    </nav>
+    <main>
+        <aside>
+            <h1>ASIDE</h1>
+        </aside>
+        <article>
+            <h1>ARTICLE</h1>
+        </article>
+        <section>
+            <h1>SECTION</h1>
+        </section>
+    </main>
+    <footer>
+        <h1>FOOTER</h1>
+    </footer>
 </body>
+
 </html>
